docroot/themes/custom/transac/alshaya_westelm/sass/components/header/_c-menu-primary.scss
.c-menu-primary {
  .region__menu-primary {
    @include breakpoint($only-tablet) {
      margin-bottom: 0;
      margin-top: 0.375rem;

      html[lang=ar] & {
        margin-top: -0.75rem;
      }

      .block-system-menublock ul {
        font-size: 0;
      }
    }

    @include breakpoint($only-mobile) {
      li {
        &.search-active {
          .mobile--search {
            &::before {
              color: $header_c_menu_search_active_icon;
            }
          }
        }

        .store {
          &::before {
            margin-top: -0.0625rem;
          }

          &:hover {
            background-color: transparent;
          }

          &.is-active {
            &::before {
              color: $header_c_menu_store_active_icon;
            }
          }
        }

        .mobile--search {
          @include icon(search) {
            color: $header_c_menu_search_icon;
            font-size: 2.1875rem;
            line-height: 1;
            margin-top: -0.125rem;
          }
        }
      }
    }
  }

  a {
    color: $header_c_menu_text;
    text-transform: uppercase;

    @include breakpoint($only-tablet) {
      font-size: 0.975rem;
    }
  }

  .mobile--menu {
    @include breakpoint($only-mobile) {
      top: 0.25rem;
      #{$left}: 0;
    }

    @include breakpoint($only-tablet) {
      padding: 0.5rem 1rem;

      html[lang=ar] & {
        padding: 0.5rem 1.375rem;
      }
    }

    &::before {
      height: 3.25rem;
      width: 2.5rem;
    }
  }

  li.search-active {
    @include breakpoint($only-mobile) {
      background: none;
    }
  }
}

.mobile--close {
  height: 1.9375rem;

  span {
    background-size: 2.4375rem;
  }
}

.c-menu-secondary,
.toggle--sign,
.main--menu ul.menu--one__list {
  @include breakpoint($upto-desktop) {
    width: 19.6875rem;
  }
}

.c-my-account-nav {
  @include breakpoint($upto-desktop) {
    width: 19.6875rem !important;
  }

  h3 {
    font-size: 0.9375rem;
    text-transform: capitalize;
    font-weight: bold;
    font-family: $alshaya-thin;
  }

  li {
    @include mm-mob-arrow(after, false) {
      top: 2.25rem;
      #{$right}: 0.5rem;
    }
  }
}

.main--menu {
  .mobile--close {
    display: none;
    top: 50%;

    span {
      background: url('../imgs/icons/ic-close-transparent.svg') center center no-repeat;
    }
  }

  &.menu--active {
    .mobile--close {
      display: inline-block;
      top: 50%;
      background: transparent;
    }
  }
}

.toggle--sign {
  .active {
    font-weight: bold;
    font-family: $alshaya-thin;
    text-transform: uppercase;
  }

  .one {
    text-transform: uppercase;

    @include breakpoint($only-tablet) {
      font-family: $alshaya-thin;
      font-weight: bold;
      color: $menu_toggle_sign;
    }
  }
}

.main--menu a {
  @include breakpoint($upto-desktop) {
    text-transform: uppercase;
  }
}

.back--link {
  @include breakpoint($upto-desktop) {
    text-transform: uppercase;
    color: $mm_l2_link_mobile_menu;
    font-weight: normal;
    font-size: 0.875rem;

    .menu__back {
      display: none;
    }

    span {
      padding-#{$left}: 2.2rem;
    }

    @include icon(chevron#{$left}) {
      font-size: 1.4375rem;
      position: absolute;
      top: 0.75rem;
    }
  }

  @include breakpoint($upto-desktop) {
    @include mm-mob-arrow(before, false) {
      top: 1.25rem;

      html[lang=ar] & {
        top: 1rem;
      }
    }
  }
}

