CORE-31262: HFD menu theming fixes on mobile and tablet.

--- a/docroot/themes/custom/transac/alshaya_westelm/sass/components/header/_c-menu-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/sass/components/header/_c-menu-primary.scss
@@ -95,11 +95,10 @@
   }
 }
 
-.c-menu-secondary,
 .toggle--sign,
-.main--menu ul.menu--one__list {
-  @include breakpoint($upto-desktop) {
-    width: 19.6875rem;
+.main--menu ul.menu--one__list:not(.secondary--main--menu__list) {
+  @include breakpoint($only-mobile) {
+    width: 19.6875rem !important;
   }
 }
 
